fix(mail): update account menu visual

--- a/workspace/mail/ui/templates/mail/ui/index.html
+++ b/workspace/mail/ui/templates/mail/ui/index.html
@@ -120,6 +120,9 @@ x-init="init()"
   </template>
 </div>
 
+<!-- Account context menu -->
+{% include "mail/ui/partials/account_context_menu.html" %}
+
 <!-- Folder context menu -->
 {% include "mail/ui/partials/folder_context_menu.html" %}
 
