--- a/workspace/mail/ui/templates/mail/ui/partials/message_detail.html
+++ b/workspace/mail/ui/templates/mail/ui/partials/message_detail.html
@@ -18,7 +18,7 @@
         <i data-lucide="mail" class="w-4 h-4"></i>
         <span x-text="(selectedFolder?.message_count ?? 0) + ' message' + ((selectedFolder?.message_count ?? 0) !== 1 ? 's' : '')"></span>
       </span>
-      <span class="flex items-center gap-1.5" x-show="selectedFolder?.unread_count > 0">
+      <span class="flex items-center gap-1.5" x-show="selectedFolder?.unread_count > 0 && !['sent', 'drafts'].includes(selectedFolder?.folder_type)">
         <i data-lucide="circle-dot" class="w-4 h-4 text-warning"></i>
         <span class="text-warning" x-text="(selectedFolder?.unread_count ?? 0) + ' unread'"></span>
       </span>
